[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/rect2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Mechanics/CrackingPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 98.8514, 48.6174 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 94.1321, 14.6379 )

[node name="CrackingPlatform" type="StaticBody2D"]
pause_mode = 1
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.83154, -56.6325 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="ReappearTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ReappearTimer" to="." method="_on_ReappearTimer_timeout"]
